# vortex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vortex.html
.github/: pull_request_template.md
.github/workflows/: cc.yml  checks.yml  pages.yml
cmake/: coverage.cmake  debug.cmake  dependencies.cmake  flags.cmake  setup.cmake
data/: .gitattributes  .gitignore  normalmap.ppm
dev/: check-format.sh  examples.sh  format.sh  setup.sh
scripts/: .pylintrc  requirements.txt  swediff.py  sweplot.py
src/: CMakeLists.txt  adjacent_test.cpp  animation.cpp  animation.h  array2d.cpp  array2d.h  array2d_test.cpp  boundary_test.cpp  cut_test.cpp  defs.h  device_util.h  device_util_test.cpp  elements.cpp  elements.h  elements_test.cpp  fem.cpp  fem.h  fem_test.cpp  field.cpp  field.h  graphics.cpp  graphics.h  graphics_test.cpp  halfedges.cpp  halfedges.h  halfedges_test.cpp  image.cpp  io.cpp  io.h  io_test.cpp  kdtree.h  library.cpp  library.h  library_test.cpp  line_test.cpp  log.cpp  log.h  mesh.cpp  mesh.h  mesh_test.cpp  (+56 more)
src/math/: linalg.cpp  linalg.h  linalg_test.cpp  mat.cpp  mat.h  mat.hpp  mat_test.cpp  result_of.h  spmat.cpp  spmat.h  spmat_test.cpp  sym.cpp  sym.h  sym.hpp  sym_test.cpp  vec.cpp  vec.h  vec.hpp  vec_test.cpp
src/shaders/: colormaps.h  earth-fs.glsl  earth-vs.glsl  edges-gs.glsl  lines-gs.glsl  particles-fs.glsl  particles-vs.glsl  points-vs.glsl  polygons-fs.glsl  polygons-gs.glsl  polygons-vs.glsl  text-fs.glsl  text-gs.glsl  triangles-fs.glsl  triangles-vs.glsl
